--- a/textclient/src/main/resources/apt/textclient/SignUp.fxml
+++ b/textclient/src/main/resources/apt/textclient/SignUp.fxml
@@ -14,9 +14,9 @@
 <Label text="Collaborative Text Editor" style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
 <TextField fx:id="usernameField" promptText="Enter your username" maxWidth="300"/>
 <HBox spacing="10" alignment="CENTER">
-    <Button fx:id="newDocButton" text="Start New Document" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" onAction="#startNewDocument"/>
-    <Button fx:id="uploadFileButton" text="Upload File" style="-fx-background-color: #2196F3; -fx-text-fill: white;" onAction="#uploadFile"/>
-    <Button fx:id="joinSessionButton" text="Join Session" style="-fx-background-color: #FFC107; -fx-text-fill: black;" onAction="#joinSession"/>
+    <Button fx:id="newDocButton" text="Start New Document" style="-fx-background-color: #4CAF50; -fx-text-fill: black; -fx-font-weight: bold;" onAction="#startNewDocument"/>
+    <Button fx:id="uploadFileButton" text="Upload File" style="-fx-background-color: #2196F3; -fx-text-fill: black; -fx-font-weight: bold;" onAction="#uploadFile"/>
+    <Button fx:id="joinSessionButton" text="Join Session" style="-fx-background-color: #FFC107; -fx-text-fill: black; -fx-font-weight: bold;" onAction="#joinSession"/>
 </HBox>
 <TextField fx:id="sessionCodeField" promptText="Enter session code" maxWidth="300"/>
 </VBox>
