--- a/textclient/src/main/resources/apt/textclient/Session.fxml
+++ b/textclient/src/main/resources/apt/textclient/Session.fxml
@@ -4,17 +4,23 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="apt.textclient.SessionController">
     <padding>
         <Insets top="10" right="10" bottom="10" left="10"/>
     </padding>
     <center>
-        <TextArea fx:id="textArea" wrapText="true" style="-fx-font-size: 14px;"/>
+        <StackPane>
+            <TextArea fx:id="textArea" wrapText="true" style="-fx-font-size: 14px;"/>
+            <Pane fx:id="cursorLayer" mouseTransparent="true"/>
+        </StackPane>
     </center>
     <right>
         <VBox fx:id="sidebar" spacing="10" prefWidth="200" style="-fx-background-color: #f0f0f0; -fx-border-color: #cccccc; -fx-border-width: 1px;">
