cursor place kind of working - tweaks

--- a/textclient/src/main/resources/apt/textclient/Session.fxml
+++ b/textclient/src/main/resources/apt/textclient/Session.fxml
@@ -17,7 +17,7 @@
     </padding>
     <center>
         <StackPane>
-            <TextArea fx:id="textArea" wrapText="true" style="-fx-font-size: 14px;"/>
+            <TextArea fx:id="textArea" wrapText="true" style="-fx-font-size: 14px; -fx-font-family: 'Consolas';"/>
             <Pane fx:id="cursorOverlay" mouseTransparent="true"/>
         </StackPane>
     </center>
